[tool.poetry]
name = "event-stream-processor"
version = "0.1.0"
description = ""
authors = ["Jenny Liew <liew.jenny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.12.15"
fastapi = "^0.116.1"
pytest = "^8.4.1"
aiolimiter = "^1.2.1"
pytest-asyncio = "^1.1.0"
pre-commit = "^4.3.0"
uvicorn = "^0.35.0"
alembic = "^1.16.5"
asyncpg = "^0.30.0"
pydantic = {extras = ["dotenv"], version = "^2.11.7"}
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
